--- a/src/assets/scss/layouts/_hero.scss
+++ b/src/assets/scss/layouts/_hero.scss
@@ -57,25 +57,32 @@
             align-items: center;
             position: relative;
 
-                .arrow__left{
-                   position: absolute;
-                   z-index: 10;
-                   left: 3%;
-                }
+            .arrows{
+                width: 100%;
+                height: 100%;
 
-                .arrow__right{
+                @include respond(phone) {
+                    display: none;
+                }
+                .arrow__left{
                     position: absolute;
                     z-index: 10;
-                    left: 97%;
+                    left: 3%;
+                 }
+ 
+                 .arrow__right{
+                     position: absolute;
+                     z-index: 10;
+                     left: 97%;
+ 
+                     @include respond (tablet) {
+                         left: 94.5%;
+                     }
+                 }
 
-                    @include respond (tablet) {
-                        left: 94.5%;
-                    }
+                 span{
+                    cursor: pointer;
                 }
-            
-
-            span{
-                cursor: pointer;
             }
 
             .tour-content{
@@ -92,6 +99,52 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
+                @include respond(phone){
+                    padding-left: toRem(16);
+                    padding-right: toRem(16);
+                }
+
+                .slick-dots{
+                    width: 100%;
+                    position: absolute;
+                    bottom: -5%;
+                    left: 91%;
+                    transform: translateX(-50%);
+                    display: flex;
+
+                    @include respond(phone-mini){
+                        left: 85%;
+                    }
+                
+                        li {
+                            margin: 0 4px;
+                            overflow: hidden;
+                            border: none;
+                            border-radius: 4px;
+                            
+                            button {
+                                background-color: #9FA1A7;
+                                width: 10px;
+                                height: 10px;
+                                
+                                &::before{
+                                    display: none;
+                                }
+
+                                &::after{
+                                    display: none;
+                                }
+                            }
+                            &.slick-active {
+                                button {
+                                    background-color: $primary;
+                                    width: 10px;
+                                    height: 10px
+                                }
+                            }
+                        } 
+                     }      
     
                 .slick-prev{
                     position: absolute;
@@ -122,6 +175,10 @@
 
                         @include respond (tab-port){
                             margin-right: toRem(32);
+                        }
+
+                        @include respond (phone){
+                            margin: 1rem auto;
                         }
 
 
@@ -217,8 +274,8 @@
                                 margin: toRem(38) auto 0;
                             }
 
-                            @include respond (phone-mini) {
-                                margin: 0 auto;
+                            @include respond (phone) {
+                                margin: 1rem auto 1rem;
                             }
                         }
                     }
