--- a/src/assets/scss/layouts/_hero.scss
+++ b/src/assets/scss/layouts/_hero.scss
@@ -1,6 +1,37 @@
 .hero{
+    position: relative;
     width: 100%;
     height: 100%;
+
+    .bio__title{
+        max-width: toRem(1000);
+        margin: toRem(250) auto;
+
+        h1{
+            @include Big-Bold(uppercase);
+            font-style: 'Gilroy', normal;
+            font-weight: 800;
+            color: $primary;
+            text-align: center;
+            @include respond (phone){
+                font-size: 80px;
+                line-height: 60px;
+            }
+
+            span{
+                color: $color-5 !important;
+            }
+            
+        }
+
+        p{
+            @include Medium-Upper(uppercase);
+            color: $color-5;
+            margin-top: toRem(30);
+            text-align: center;
+            font-weight: 300;
+        }
+    }
 
     .title{
         width: toRem(190);
@@ -37,16 +68,162 @@
         }
     }
 
+    .container-bio{
+        background:linear-gradient(180deg, rgba(38, 79, 226, 0.2) 0%, rgba(38, 79, 226, 0) 100%);
+        border-radius: 5px;
+    }
+
     .container{
-        position: relative;
         max-width: toRem(1000);
         width: 100%;
-        height: toRem(507);
-        margin: 0 auto;
-        margin-top: toRem(150);
+        margin: 0 auto toRem(16);
 
-        @include respond(tablet){
-            height: 100%;
+        .band-history{
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            padding: 0 toRem(16);
+
+            .band-history__sub{
+                display: flex;
+                gap: toRem(16);
+
+                .band-history__sub-box{
+                    border: 0.970902px solid #375FEB;
+                    border-radius: 5px;
+                    width: toRem(220);
+                    height: toRem(218);
+                    gap: toRem(16);
+
+                    &:first-child{
+                        margin-top: toRem(100);
+                    }
+
+                    &:nth-child(2){
+                        margin-top: toRem(184);
+                    }
+
+                    &:nth-child(4){
+                        margin-top: toRem(110);
+                    }
+
+                    .box-content{
+                        width: toRem(165);
+                        margin: 0 auto;
+                    }
+
+                    .main-content{
+                        padding-top: toRem(25);
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        margin-bottom: toRem(8);
+
+                        h2{
+                            text-transform: uppercase;
+                            font-family: 'Gilroy';
+                            font-style: normal;
+                            font-weight: 800;
+                            color: $color-5;
+                            margin: 0 toRem(16);
+                        }
+
+                        p{
+                            font-family: 'Gilroy';
+                            font-style: normal;
+                            font-weight: 300;
+                            @include Medium-Upper(uppercase);
+                            color: $color-5;
+                            margin-bottom: 0 !important;
+                        }
+                        
+                    }
+                    .sub-content{
+                        p{
+                            font-family: 'Inter';
+                            font-style: normal;
+                            font-weight: 400;
+                            @include p-5();
+                            color: #9FA1A7;
+                            margin: toRem(16) 0 0!important;
+                        }
+                    }
+                }       
+            }
+            
+            .band-history__main{
+                position: relative;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-gap: toRem(20);
+                padding: toRem(20) 0;
+
+                .band-title{
+                    position: absolute;
+                    width: toRem(138);
+                    left: 51%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    h1{
+                        @include Large(uppercase);
+                        font-weight: 800;
+
+                        span{
+                            font-family: 'Gilroy';
+                            font-style: normal;
+                            font-weight: 800;
+                            color: $color-5;
+                            margin: 0;
+
+                            &:first-child{
+                                color: $primary;
+                            }
+                            &:nth-child(2){
+                                color: $primary;
+                            }
+                        }
+                    }
+                    p{
+                        @include Medium-Upper(uppercase);
+                        color: $color-5;
+                        margin-top: 15px;
+                    }
+                }
+
+                .content-left{
+                    img{
+                        object-fit: cover;
+                        display: block;
+                    }
+                }
+
+                .content-right{
+                    display: flex;
+                    margin-top: toRem(80);
+                    align-items: center;
+                    flex-direction: column;
+
+                    h2{
+                        width: toRem(300);
+                        margin: 0 auto;
+                        text-align: center;
+                        font-family: 'Gilroy', normal;
+                        font-weight: 800;
+                        line-height: 47px;
+                        color: $color-5;
+                        margin-bottom: toRem(32);
+                    }
+
+                    p{
+                        width: toRem(300);
+                        margin: 0 auto;
+                        @include p-4();
+                        font-family: 'Inter', normal;
+                        font-weight: 400;
+                        color: #9FA1A7;
+                    }
+                }
+            }
         }
 
         .tours{
@@ -87,8 +264,7 @@
 
             .tour-content{
                 position: relative;
-                padding-left: toRem(50);
-                padding-right: toRem(50);
+                padding: toRem(64) toRem(50);
                 width: 100%;
                 height: 100%;
                 background: rgba(20, 24, 44, 0.75);
