--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -23,11 +23,6 @@
     top: 0;
     z-index: -1;
 }
-
-    .home{
-        position: relative;
-        width: 100%;
-        height: 100%;
         
         .nav{
             position: relative;
@@ -35,15 +30,18 @@
             flex-wrap: nowrap;
             justify-content: space-between;
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-            height: toRem(98);
             align-items: center;
             justify-items: center;
             width: 100%;
+            height: 100%;
+
+            @include respond (tablet){
+                padding: 0 2.5rem;
+            }
             
             .button{
                 display: none;
                 color: $color-5;
-                padding-right: 2rem;
                 @include respond (tablet) {
                     display: block;
                 }
@@ -51,14 +49,13 @@
             .close{
                 display: none;
                 color: $color-5;
-                padding-right: 2rem;
             }
     
             .platform{
                 display: flex;
                 border-right: 1px solid rgba(255, 255, 255, 0.2);
-                height: toRem(98);
                 width: toRem(222);
+                height: toRem(98);
                 align-items: center;
                 justify-content: center;
     
@@ -67,6 +64,7 @@
                 }
     
                 a{
+                    
                     @include respond (tablet) {
                         display: none
                     }
@@ -83,11 +81,43 @@
                 }
                 }
                 
-                .img-1{
+                .logo_plat-1{
                     margin-right: toRem(24);
+                    background-color: $color-5;
+                    mask: url(../../media/images/Apple.svg) no-repeat center;
+                    -webkit-mask: url(../../media/images/Apple.svg) no-repeat center;
+                    height: toRem(21.25);
+                    width: toRem(18);
+                    transition: all .2s ease-in-out;
+                    &:hover{
+                        background-color: $secondary;
+                        transform: translateY(-2px);
+                    }
                 }
-                .img-2{
+                .logo_plat-2{
                     margin-right: toRem(24);
+                    background-color: $color-5;
+                    mask: url(../../media/images/Spotify.svg) no-repeat center;
+                    -webkit-mask: url(../../media/images/Spotify.svg) no-repeat center;
+                    height: toRem(21.25);
+                    width: 1.3rem;
+                    transition: all .2s ease-in-out;
+                    &:hover{
+                        background-color: $state-2;
+                        transform: translateY(-2px);
+                    }
+                }
+                .logo_plat-3{
+                    background-color: $color-5;
+                    mask: url(../../media/images/Youtube.svg) no-repeat center;
+                    -webkit-mask: url(../../media/images/Youtube.svg) no-repeat center;
+                    height: toRem(21.25);
+                    width: 1.5rem;
+                    transition: all .2s ease-in-out;
+                    &:hover{
+                        background-color: $state-4;
+                        transform: translateY(-2px);
+                    }
                 }
                             
             }
@@ -95,7 +125,6 @@
             .menus{
                 position: relative;
                 width: toRem(997);
-                height: toRem(98);
                 display: flex;
                 align-items: center;
                 justify-content: space-around;
@@ -138,6 +167,12 @@
                     line-height: toRem(17.6);
                     text-transform: uppercase;
                     cursor: pointer;
+                    transition: all .2s ease-out;
+
+                    &:hover{
+                        color: $color-5;
+                        transform: translateY(2px);
+                    }
     
                     @include respond (tablet) {
                         margin-top: toRem(32);
@@ -182,11 +217,8 @@
                 align-items: center;
                 justify-content: center;
                 width: toRem(222);
-                height: toRem(98);
     
                 @include respond (tablet) {
-                    height: toRem(80);
-                    margin: toRem(700) auto 0;
                     display: none;
                     z-index: 100;
                     border-radius: 5px;
@@ -208,11 +240,17 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    padding: 2.4rem toRem(56);
+                    transition: all .4s ease-out;
+
+                    &:hover{
+                        background-color: $secondary;
+                    }
     
                     @include respond (tablet) {
-                        margin-left: -5.2rem;
+                        margin-left: -6.2rem;
                     }
                 }
             }
         }
-    }
+
