--- a/src/assets/scss/layouts/_song.scss
+++ b/src/assets/scss/layouts/_song.scss
@@ -26,6 +26,7 @@
         }
 
         .btn-song{
+            text-decoration: none;
             cursor: pointer;
             display: flex;
             justify-content: center;
@@ -42,6 +43,11 @@
             font-size: 18px;
             line-height: 22px;
             color: $color-5;
+            transition: all .2s ease-out;
+
+            &:hover{
+                background-color: $primary;
+            }
         }
 
         .song__lists{
