--- a/src/assets/scss/layouts/_videos.scss
+++ b/src/assets/scss/layouts/_videos.scss
@@ -65,6 +65,11 @@
                     box-shadow: -9px 0px 15px -3px rgba(0, 0, 0, 0.69);
                     transition: all 0.2s ease-out;
 
+                    &:hover{
+                        background: $primary;
+                        border: 2px solid #375feb;
+                    }
+
                     @include respond(tablet) {
                         left: 95%;
                     }
@@ -92,6 +97,11 @@
                         background: #13172B;
                         box-shadow: -9px 0px 15px -3px rgba(0, 0, 0, 0.69);
                         transition: all 0.2s ease-out;
+
+                        &:hover{
+                            background: $primary;
+                            border: 2px solid #375feb;
+                        }
                     }
                 
 
@@ -165,6 +175,16 @@
                                 background-color: $primary;
                                 border-radius: 50%;
                                 z-index: 10;
+                                border: 2px solid #375feb;
+                                transition: all .2s ease-in;
+
+                                &:hover{
+                                    background-color: $color-1;
+                                }
+
+                                &:hover img{
+                                    color: $primary;
+                                }
 
                                 img{
                                     width: 10px;
@@ -193,7 +213,6 @@
 
             .video__list--main{
                 width: 100%;
-                height: toRem(700);
                 display: flex;
                 flex-direction: column;
 
@@ -235,16 +254,13 @@
 
                 .video__main{
                     width: 100%;
-                    height: toRem(562);
-                    background: url(../../media/images/video-main.jpg);
-                    background-size: cover;
-                    background-position: center;
+                    height: 100%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     
                     @include respond (tablet) {
-                        height: toRem(512);
+                        height: 100%;
                     }
 
                     @include respond (phone) {
